force-app/main/default/objects/National_ID__c/fields/Country_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Text__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>