force-app/main/default/objects/National_ID__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>National ID&#39;s</relationshipLabel>
    <relationshipName>National_ID_s</relationshipName>
    <type>Lookup</type>
</CustomField>